# MiniCad

./: .gitignore  CMakeLists.txt  README.md
frontend/: app.js  index.html  style.css
src/: GeometryMath.cpp  GeometryMath.h  Point2D.h  SVGExporter.cpp  SVGExporter.h  Shape.h  Shapes.cpp  Shapes.h  main.cpp  server.cpp
